testsuite/tests/typecheck/should_fail/T23739c.hs

module T23739c where

import Data.Tuple.Experimental
import GHC.TypeLits

g :: Int
g = Int{}
